pushing for changes made after deployment

--- a/breakfast-recipies.html
+++ b/breakfast-recipies.html
@@ -9,6 +9,7 @@
     <!-- Page Title -->
     <title>Healthy Cooking Made Simple!</title>
 </head>
+
 <!-- Body -->
 <body>
     <!-- Header -->
@@ -57,7 +58,7 @@
                 <div class="breakfast-container" id="breakfast-row">
                     <!-- Banana Pancakes Container -->
                     <aside class="banana-pancakes" id="recipe-item">
-                        <!-- Recipe Title-->
+                        <!-- Recipe Heading -->
                         <h2>Banana and Banana Pancakes</h2>
                         <!-- Meal Image -->
                         <img src=".//assets/images/banana_pancakes_62919_16x9.jpg"
@@ -118,17 +119,18 @@
 
                     <!-- Bacon and Eggs Recipe Section -->
                     <aside class="bacon-and-eggs" id="recipe-item">
-                        <!-- Recipe Title-->
+                        <!-- Recipe Title -->
                         <h2>Fried bacon with poached egg and tomatoes</h2>
-                        <!-- Meal Imagev-->
+                        <!-- Meal Image -->
                         <img src="./assets/images/pan-fried_bacon_with_76907_16x9.jpg"
                             alt="An image of a place with eggs and bacon on it.">
                             <!-- Image Caption-->
                             <figcaption>Image and recipe sourced from BBC Food.</figcaption>
                             <!-- Input Element for Expand/Hide Button -->
                         <input type="checkbox" id="expand-checkbox-bacon-and-eggs">
-                        <!-- Recipe Introduction Paragraph-->
+                        <!-- Recipe Container -->
                         <div class="recipe-content-bacon-and-eggs">
+                            <!-- Recipe Introduction Paragraph-->
                             <p>You don’t have to give up your bacon and eggs when you’re dieting – just slightly change
                                 the way you cook it. Choose good lean back bacon and partner it with poached eggs for
                                 protein
@@ -183,7 +185,7 @@
                         <label for="expand-checkbox-bacon-and-eggs" id="expand-checkbox-label">Expand/Hide</label>
                     </aside>
 
-                    <!-- Recipe Container -->
+                    <!-- Overnight Oats Recipe Section -->
                     <aside class="overnight-oats" id="recipe-item">
                         <!-- Recipe Heading -->
                         <h2>Blueberry Overnight Oats</h2>
