--- a/dinner-recipies.html
+++ b/dinner-recipies.html
@@ -6,16 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://kit.fontawesome.com/9126144eb8.js" crossorigin="anonymous"></script>
+    <!-- Page Title -->
     <title>Healthy Cooking Made Simple!</title>
 </head>
 
+<!-- Body -->
 <body>
+    <!-- Header -->
     <header>
+        <!-- Website Logo/Main Heading-->
         <a href="index.html" id="title-logo">
             <h1>Healthy Cooking Made Simple!</h1>
         </a>
+        <!-- Navigation Toggle -->
         <input type="checkbox" id="nav-dropdown-toggle" name="nav-dropdown-toggle">
         <label for="nav-dropdown-toggle" class="nav-dropdown-toggle-label"><i class="fa-solid fa-bars"></i></label>
+        <!-- Navigation Menu -->
         <nav>
             <ul class="navigation-bar" id="navigation-bar">
                 <li><a href="index.html">Home</a></li>
@@ -25,34 +31,51 @@
             </ul>
         </nav>
     </header>
+    <!-- Main Body Element -->
     <main>
+        <!-- Dinner Hero Image -->
         <section class="hero-image2">
+            <!-- Cover Text -->
             <div class="cover-text">
                 <h2>Why not try out our range of delicious lunch recipies!</h2>
             </div>
         </section>
+        <!-- Main Content Container-->
         <div class="main-content" id="main-content">
             <section class="section-one">
+                <!-- Section Heading -->
                 <h2>Section</h2>
+                <!-- Section Content -->
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam reiciendis praesentium porro
                     accusantium, veritatis dolore quos tenetur ut, debitis in ducimus earum maiores dicta similique
                     vel
                     temporibus facere error nisi!</p>
+                    <!-- Border for bottom of section -->
                 <h2 class="content-bottom"></h2>
             </section>
+            <!-- Dinner Recipe Container-->
             <div class="dinner-recipies">
                 <div class="dinner-container" id="dinner-row">
+                    <!-- Pesto Gnocchi Contsiner -->
                     <aside class="pesto-gnocchi" id="recipe-item">
+                        <!-- Recipe Heading -->
                         <h2>Gnocchi with crispy bacon and spinach pesto</h2>
+                        <!-- Meal Image -->
                         <img src="./assets/images/gnocchi_with_crispy_19660_16x9.jpg" alt="">
+                        <!-- Image Caption -->
                         <figcaption>Image and recipe sourced from BBC Food.</figcaption>
+                        <!-- Input Element for Expand/Hide Button -->
                         <input type="checkbox" id="expand-checkbox-pesto-gnocchi">
+                        <!-- Recipe Content -->
                         <div class="recipe-content-pesto-gnocchi">
+                            <!-- Recipe Introduction Paragraph -->
                             <p>Gnocchi makes an easy-peasy 10-minute dinner. It's so simple to give homemade pesto a
                                 healthy boost using fresh spinach.</p>
+                            <!-- Recipe Introduction Paragraph Continued-->
                             <p>For this recipe you will need a mini food processor or a blender. Each serving provides
                                 631 kcal, 17g protein, 74g carbohydrates (of which 1g sugars), 28g fat (of which 10.5g
                                 saturates), 6g fibre and 3.3g salt.</p>
+                            <!-- Ingredients Heading and List-->
                             <h3>Ingredients</h3>
                             <ul>
                                 <li>15g/½oz fresh basil</li>
@@ -64,6 +87,7 @@
                                 <li>500g pack potato gnocchi</li>
                                 <li>large pinch sea salt</li>
                             </ul>
+                            <!-- Instructions Heading and Directions-->
                             <h3>Method</h3>
                             <ol>
                                 <li>To make the pesto, put the basil, spinach, Parmesan, salt and half the olive oil in
@@ -79,22 +103,31 @@
                                 <li>Stir in the pesto and bacon and serve. </li>
                             </ol>
                         </div>
+                        <!-- Label for Expand/Hide Button -->
                         <label for="expand-checkbox-pesto-gnocchi" id="expand-checkbox-label">Expland/Hide</label>
                     </aside>
-
+                    
+                    <!-- Chilli Bean Stir-Fry Section -->
                     <aside class="chilli" id="recipe-item">
+                        <!-- Recipe Title -->
                         <h2>Chilli Bean Stir-Fry</h2>
+                        <!-- Meal Image -->
                         <img src="./assets/images/chilli_bean_stir-fry_19412_16x9.jpg"
                             alt="An image of a bowl of Chilli Bean Stir-Fry.">
-                            <figcaption>Image and recipe sourced from BBC Food.</figcaption>
+                        <!-- Image Caption-->
+                        <figcaption>Image and recipe sourced from BBC Food.</figcaption>
+                        <!-- Input Element for Expand/Hide Button -->
                         <input type="checkbox" id="expand-checkbox-chilli">
+                        <!-- Recipe Container -->
                         <div class="recipe-content-chilli">
+                            <!-- Recipe Introduction Paragraph-->
                             <p>Dr Rupy shows us how to make a budget-friendly, nutritious meal for two. This chilli bean
                                 stir-fry costs just over £1 per portion and will be on the table in 30 minutes or less.
                             </p>
                             <p> Each serving provides 436 kcal, 19g protein, 58g carbohydrate (of which 16g sugars), 9g
                                 fat (of which 1.5g saturates), 20g fibre and 2.5g salt. </p>
-                            <ul>
+                            <!-- Recipe Ingredients -->
+                                <ul>
                                 <li>1 nest wholewheat noodles (approx. 60g/2¼oz)</li>
                                 <li>1 red chilli, roughly chopped</li>
                                 <li>20g/¾oz piece fresh root ginger, roughly chopped</li>
@@ -109,6 +142,7 @@
                                 <li>1 red onion, thinly sliced</li>
                                 <li>400g tin black beans, drained</li>
                             </ul>
+                            <!-- Recipe Intructions -->
                             <h3>Method</h3>
                             <ol>
                                 <li>Bring a saucepan of water to the boil, add the noodles and cook for 4 minutes or
@@ -124,20 +158,29 @@
                                     minute. Divide between 2 warmed bowls and serve.</li>
                             </ol>
                         </div>
+                        <!-- Label for Expand/Hide Button -->
                         <label for="expand-checkbox-chilli" id="expand-checkbox-label">Expand/Hide</label>
                     </aside>
 
-
+                    <!-- Kimchi Fried Rice Recipe Section -->
                     <aside class="kimchi-fried-rice" id="recipe-item">
+                        <!-- Recipe Title-->
                         <h2>Kimchi Fried Rice</h2>
+                        <!-- Meal Image -->
                         <img src="./assets/images/kimchi_fried_rice_03887_16x9.jpg"
                             alt="An image of a bowl of Kimchi Fried Rice.">
-                            <figcaption>Image and recipe sourced from BBC Food.</figcaption>
+                        <!-- Image Caption-->
+                        <figcaption>Image and recipe sourced from BBC Food.</figcaption>
+                        <!-- Input Element for Expand/Hide Button -->
                         <input type="checkbox" id="expand-checkbox-kimchi-fried-rice">
+                         <!-- Recipe Container -->
                         <div class="recipe-content-kimchi-fried-rice">
+                            <!-- Recipe Introduction Paragraph-->
                             <p>Looking for a simple, tasty dinner? Kimchi fried rice makes great use of store cupboard
                                 ingredients and is packed with flavour thanks to a spicy kick from kimchi and gochujang.
                             </p>
+                            <!-- Recipe Ingredients -->
+                            <h3>Ingredients</h3>
                             <ul>
                                 <li>1 free-range egg, beaten, plus 2–3 fried eggs, to serve (optional)</li>
                                 <li>1–2 garlic cloves, finely chopped</li>
@@ -160,6 +203,7 @@
                                 <li>¼ tsp sugar</li>
                                 <li>1 tsp sesame oil</li>
                             </ul>
+                            <!-- Recipe Intructions -->
                             <h3>Method</h3>
                             <ol>
                                 <li>Get all your ingredients prepared and lay them out close to the hob. This recipe is
@@ -180,17 +224,28 @@
                                     texture.</li>
                             </ol>
                         </div>
+                        <!-- Label for Expand/Hide Button -->
                         <label for="expand-checkbox-kimchi-fried-rice" id="expand-checkbox-label">Expand/Hide</label>
                     </aside>
+
+                    <!-- Sausage Bake Recipe Section  -->
                     <aside class="sausage-bake" id="recipe-item">
+                        <!-- Recipe Title -->
                         <h2>Air fryer sausage bake</h2>
+                        <!-- Meal Image -->
                         <img src="./assets/images/air_fryer_sausage_bake_35909_16x9.jpg"
                             alt="An image of a cutting board with sausage bake on it.">
-                            <figcaption>Image and recipe sourced from BBC Food.</figcaption>
+                        <!-- Image Caption-->
+                        <figcaption>Image and recipe sourced from BBC Food.</figcaption>
+                        <!-- Input Element for Expand/Hide Button -->
                         <input type="checkbox" id="expand-checkbox-sausage-bake">
-                        <div class="recipe-content-sausage-bake">
+                        
+                        <!-- Recipe Container -->
+                        <div class="recipe-content-sausage-bake">  
+                            <!-- Recipe Introduction Paragraph-->
                             <p>This air fryer sausage bake is a super speedy all-in-one meal, perfect for weeknights
                                 when you're low on time and energy.</p>
+                            <!-- Recipe Ingredients -->
                             <h3>Ingredients</h3>
                             <ul>
                                 <li>1 red onion, quartered, or 1 leek, cut into pieces</li>
@@ -205,6 +260,7 @@
                                 <li>8 pork sausages</li>
                                 <li>handful basil leaves, to garnish (optional)</li>
                             </ul>
+                            <!-- Recipe Intructions -->
                             <h3>Method</h3>
                             <ol>
                                 <li>Heat the air fryer to 190C. Place the onion, pepper, cherry tomatoes and courgette
@@ -221,18 +277,28 @@
                                     basil leaves, if using. Serve immediately. </li>
                             </ol>
                         </div>
+                        <!-- Label for Expand/Hide Button -->
                         <label for="expand-checkbox-sausage-bake" id="expand-checkbox-label">Expand/Hide</label>
                     </aside>
+
+                    <!-- Broccoli Pesto Spaghetti Recipe Section -->
                     <aside class="broccoli-pesto-spaghetti" id="recipe-item">
+                        <!-- Recipe Heading -->
                         <h2>Spaghetti with broccoli pesto</h2>
+                        <!-- Meal Image -->
                         <img src="./assets/images/spaghetti_with_broccoli_82791_16x9.jpg"
                             alt="An image og a bowl of Broccoli and Pesto Spaghetti.">
-                            <figcaption>Image and recipe sourced from BBC Food.</figcaption>
+                        <!-- Image Caption -->
+                        <figcaption>Image and recipe sourced from BBC Food.</figcaption>
+                        <!-- Input Element for Expand/Hide Button -->
                         <input type="checkbox" id="expand-checkbox-broccoli-pesto-spaghetti">
+                        <!-- Recipe Content Container -->
                         <div class="recipe-content-broccoli-pesto-spaghetti">
+                            <!-- Recipe Introduction Paragraph -->
                             <p>Boost your five-a-day by swapping pine nuts for broccoli in this tangy broccoli pesto
                                 pasta. It’s ideal as a quick midweek supper that even the kids will eat.</p>
                             <p> Equipment and preparation: You will need a food processor for this recipe. </p>
+                            <!-- Recipe Ingredients -->
                             <h3>Ingredients</h3>
                             <ul>
                                 <li>300g/10½oz dried spaghetti</li>
@@ -245,6 +311,7 @@
                                 <li>1 tbsp lemon juice</li>
                                 <li>salt and freshly ground black pepper</li>
                             </ul>
+                            <!-- Recipe Instructions -->
                             <h3>Method</h3>
                             <ol>
                                 <li>Cook the spaghetti in a large saucepan of boiling salted water according to the
@@ -259,19 +326,29 @@
                                 <li>Serve with some extra Parmesan grated over the top. </li>
                             </ol>
                         </div>
+                        <!-- Label for Expand/Hide Button -->
                         <label for="expand-checkbox-broccoli-pesto-spaghetti"
                             id="expand-checkbox-label">Expand/Hide</label>
                     </aside>
+
+                    <!-- Korean Pancakes Recipe Section -->
                     <aside class="korean-pancakes" id="recipe-item">
+                        <!-- Recipe Heading -->
                         <h2>Korean-style crispy vegetable pancakes</h2>
+                        <!-- Meal Image-->
                         <img src="./assets/images/yachaejeon_korean_crispy_55746_16x9.jpg"
                             alt="An image of a plate of Korean Pancakes.">
-                            <figcaption>Image and recipe sourced from BBC Food.</figcaption>
+                        <!-- Image Caption-->
+                        <figcaption>Image and recipe sourced from BBC Food.</figcaption> 
+                        <!-- Input Element for Expand/Hide Button -->
                         <input type="checkbox" id="expand-checkbox-korean-pancakes">
+                        <!-- Recipe Content Container -->
                         <div class="recipe-content-korean-pancakes">
+                            <!-- Recipe Introduction Paragraph -->
                             <p>Yachaejeon are delicious vegan crispy vegetable pancakes, made here with a quick tamari
                                 dipping sauce. They’re quick, easy and can be adapted with whatever veg you have to
                                 hand. </p>
+                            <!-- Ingredients Section -->
                             <h3>Ingredients</h3>
                             <ul>
                                 <li>125g/4½oz gluten-free plain flour</li>
@@ -284,6 +361,7 @@
                                 <li>2 tbsp rapeseed or olive oil</li>
                                 <li>salt</li>
                             </ul>
+                            <!-- Instructions Section -->
                             <h3>Method</h3>
                             <ol>
                                 <li>Tip the flour and a pinch of salt into a large bowl, then whisk in 125ml/4fl oz
@@ -299,15 +377,17 @@
                                 <li>Combine the dipping sauce ingredients in a small bowl and serve with the pancakes.
                                 </li>
                             </ol>
-
                         </div>
+                        <!-- Label for Expand/Hide Button -->
                         <label for="expand-checkbox-korean-pancakes" id="expand-checkbox-label">Expand/Hide</label>
                     </aside>
                 </div>
             </div>
         </div>
     </main>
+     <!-- Footer -->
     <footer>
+        <!-- Social Media Links -->
         <ul id="social-media-links">
             <li class="social-media"><a href="https://www.instagram.com" target="_blank"><i
                         class="fa-brands fa-instagram"></i></a></li>
