--- a/lunch-recipies.html
+++ b/lunch-recipies.html
@@ -6,16 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://kit.fontawesome.com/9126144eb8.js" crossorigin="anonymous"></script>
+    <!-- Page Title-->
     <title>Healthy Cooking Made Simple!</title>
 </head>
+<!-- Body-->
 
 <body>
+    <!-- Header -->
     <header>
+        <!-- Page Logo and Main Heading -->
         <a href="index.html" id="title-logo">
             <h1>Healthy Cooking Made Simple!</h1>
         </a>
+        <!-- Toggle for Navigation - Hamburger Icon-->
         <input type="checkbox" id="nav-dropdown-toggle" name="nav-dropdown-toggle">
         <label for="nav-dropdown-toggle" class="nav-dropdown-toggle-label"><i class="fa-solid fa-bars"></i></label>
+        <!-- Navigation Menu -->
         <nav>
             <ul class="navigation-bar" id="navigation-bar">
                 <li><a href="index.html">Home</a></li>
@@ -25,33 +31,49 @@
             </ul>
         </nav>
     </header>
+    <!-- Main Body Element-->
     <main>
+        <!-- Lunch Hero Image -->
         <section class="hero-image2">
+            <!-- Cover Text -->
             <div class="cover-text">
                 <h2>Why not try out our range of delicious lunch recipies!</h2>
             </div>
         </section>
+        <!-- Main Content Container -->
         <div class="main-content" id="main-content">
+            <!-- Section for Flexbox-->
             <section class="section-one">
+                <!-- Section Heading -->
                 <h2>Section</h2>
+                <!-- Section Content -->
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam reiciendis praesentium porro
                     accusantium, veritatis dolore quos tenetur ut, debitis in ducimus earum maiores dicta similique
                     vel
                     temporibus facere error nisi!</p>
+                <!-- Bottom Border of section -->
                 <h2 class="content-bottom"></h2>
             </section>
+            <!-- Lunch Recipe Container -->
             <div class="lunch-recipies">
                 <div class="lunch-container" id="lunch-row">
+                    <!-- Caesar Salad Container -->
                     <aside class="caesar-salad" id="recipe-item">
+                        <!-- Recipe Heading -->
                         <h2>Caesar Salad</h2>
+                        <!-- Meal Image -->
                         <img src="./assets/images/easy_caesar_salad_64317_16x9.jpg"
                             alt="An image of a plate with a caesar salad on it.">
-                            <figcaption>Image and recipe sourced from BBC Food.</figcaption>
+                        <!-- Image Caption -->
+                        <figcaption>Image and recipe sourced from BBC Food.</figcaption>
+                        <!-- Input Element for Expand/Hide Button -->
                         <input type="checkbox" id="expand-checkbox-caesar-salad">
+                        <!-- Recipe Content-->
                         <div class="recipe-content-caesar-salad">
+                            <!-- Recipe Introduction Paragraph -->
                             <p>This recipe delivers on all the Caesar flavour you’re craving, but with less effort and
                                 less washing up. The main piece of equipment is a jam jar!</p>
-
+                            <!-- Ingredients Heading and List-->
                             <h3>Ingredients</h3>
                             <ul>
                                 <li>1 slice stale sourdough bread (roughly 100g/3½oz)</li>
@@ -64,6 +86,7 @@
                                 <li>4 tbsp finely grated Parmesan, plus extra for serving</li>
                                 <li>300g/10½oz sweet lettuce, such as cos, oakleaf or lamb's lettuce</li>
                             </ul>
+                            <!-- Instructions Heading and Directions-->
                             <h3>Method</h3>
                             <ol>
                                 <li>Preheat the oven to 200C/180C Fan/Gas 6. Cut the bread into rough 2cm/¾in chunks and
@@ -86,22 +109,30 @@
                                     extra grated Parmesan.</li>
                             </ol>
                         </div>
+                        <!-- Label for Expand/Hide Button -->
                         <label for="expand-checkbox-caesar-salad" id="expand-checkbox-label">Expand/Hide</label>
                     </aside>
+                    <!-- Halloumi Wrap Recipe Section -->
                     <aside class="halloumi-wrap" id="recipe-item">
+                        <!-- Recipe Title -->
                         <h2>Halloumi Wrap</h2>
+                        <!-- Meal Image -->
                         <img src="./assets/images/easy_halloumi_wrap_57379_16x9.jpg"
                             alt="An image of a plate with a halloumi wrap on it.">
-                            <figcaption>Image and recipe sourced from BBC Food.</figcaption>
+                        <!-- Image Caption -->
+                        <figcaption>Image and recipe sourced from BBC Food.</figcaption>
+                        <!-- Input Element for Expand/Hide Button -->
                         <input type="checkbox" id="expand-checkbox-halloumi-wrap">
+                        <!-- Recipe Container -->
                         <div class="recipe-content-halloumi-wrap">
+                            <!-- Recipe Introduction Paragraph-->
                             <p>Once you know how to cook golden, crispy halloumi, the options are endless, but pairing
                                 it with hummus and salad in an easy wrap is a great place to start. If you like it
                                 spicy, add a drizzle of hot sauce.</p>
 
                             <p>Each serving provides 790 kcals, 33g protein, 45g carbohydrates (of which 11g sugars)
                                 51g fat (of which 21g saturates), 10g fibre and 4g salt.</p>
-
+                            <!-- Recipe Ingredients -->
                             <h3>Ingredients</h3>
                             <ul>
                                 <li>100g/3½oz halloumi</li>
@@ -113,6 +144,12 @@
                                 <li>freshly ground black pepper</li>
                             </ul>
                             <h3>To serve (optional)</h3>
+                            <ul>
+                                <li>sweet chilli sauce, Tabasco or sriracha</li>
+                                <li>sliced olives, diced sundried tomatoes, pickled chillies, sliced red onion</li>
+                            </ul>
+                            <!-- Recipe Instructions-->
+                            <h3>Method</h3>
                             <ol>
                                 <li>Slice the halloumi into 1cm/½in thick strips and season with pepper.</li>
                                 <li>Heat the oil in a frying pan over a low–medium heat and fry the halloumi strips for
@@ -125,22 +162,30 @@
                                     warm.</li>
                             </ol>
                         </div>
+                        <!-- Label for Expand/Hide Button -->
                         <label for="expand-checkbox-halloumi-wrap" id="expand-checkbox-label">Expand/Hide</label>
                     </aside>
 
-
+                    <!-- Recipe Container -->
                     <aside class="tuna-bean" id="recipe-item">
+                        <!-- Recipe Heading -->
                         <h2>Tuna Bean Salad</h2>
+                        <!-- Meal Image -->
                         <img src="./assets/images/tuna_bean_salad_54783_16x9.jpg"
                             alt="An image of two plated with tuna bean salad on them.">
-                            <figcaption>Image and recipe sourced from BBC Food.</figcaption>
+                        <!-- Image Caption -->
+                        <figcaption>Image and recipe sourced from BBC Food.</figcaption>
+                        <!-- Input Element for Expand/Hide Button -->
                         <input type="checkbox" id="expand-checkbox-tuna-bean">
+                        <!-- Recipe Content Container -->
                         <div class="recipe-content-tuna-bean">
+                            <!-- Recipe Introduction Paragraph -->
                             <p>Similar to a tuna Nicoise, this salad has the addition of canned beans for extra fibre.
                                 Use drained and rinsed red kidney beans if you can’t find mixed beans.</p>
                             <p>With a GI of 50 this meal is high protein, low GI. This meal provides 390 kcal, 39g
                                 protein, 21g carbohydrate (of which 5.5g sugars), 15g fat (of which 3g saturates), 8.5g
                                 fibre and 1.3g salt per portion. </p>
+                            <!-- Recipe Ingredients -->
                             <h3>Ingredients</h3>
                             <ul>
                                 <li>100g/3½oz green beans, halved</li>
@@ -157,6 +202,7 @@
                                 <li>1 tsp Dijon mustard</li>
                                 <li>freshly ground black pepper</li>
                             </ul>
+                            <!-- Recipe Instructions -->
                             <h3>Method</h3>
                             <ol>
                                 <li>Cook the green beans in a pan of boiling water for 4 minutes. Plunge them into a
@@ -170,16 +216,26 @@
                                     pepper.</li>
                             </ol>
                         </div>
+                        <!-- Label for Expand/Hide Button -->
                         <label for="expand-checkbox-tuna-bean" id="expand-checkbox-label">Expand/Hide</label>
                     </aside>
+
+                    <!-- Recipe Container -->
                     <aside class="pizza-toast" id="recipe-item">
+                        <!-- Recipe Heading -->
                         <h2>Pizza on Toast</h2>
+                        <!-- Meal Image-->
                         <img src="./assets/images/pizza_on_toast_09337_16x9.jpg" alt="An oven tray of pizza on toast.">
+                        <!-- Image Caption-->
                         <figcaption>Image and recipe sourced from BBC Food.</figcaption>
+                        <!-- Input Element for Expand/Hide Button -->
                         <input type="checkbox" id="expand-checkbox-pizza-toast">
+                        <!-- Recipe Content Container -->
                         <div class="recipe-content-pizza-toast">
+                            <!-- Recipe Introduction Paragraph -->
                             <p>Cheese on toast meets pizza in this easy peasy cheesy recipe – add whatever toppings take
                                 your fancy.</p>
+                            <!-- Ingredients Section -->
                             <h3>Ingredients</h3>
                             <ul>
                                 <li>1 thick slice white or brown bread</li>
@@ -188,6 +244,7 @@
                                     tomatoes, olives, jalapeños</li>
                                 <li>30g/1oz cheese, such as grated Cheddar, ready-grated mozzarella, or a mixture</li>
                             </ul>
+                            <!-- Instructions Section -->
                             <h3>Method</h3>
                             <ol>
                                 <li>Preheat the grill to a medium-high setting. Place the bread on a baking tray or
@@ -198,18 +255,37 @@
                                     toppings are hot. </li>
                             </ol>
                         </div>
+                        <!-- Label for Expand/Hide Button -->
                         <label for="expand-checkbox-pizza-toast" id="expand-checkbox-label">Expand/Hide</label>
                     </aside>
+
+                    <!-- Recipe Container -->
                     <aside class="cheese-toastie" id="recipe-item">
+                        <!-- Recipe Heading -->
                         <h2>Cheese, Tomato and pesto toastie</h2>
+                        <!-- Meal Image -->
                         <img src="./assets/images/cheese_tomato_and_pesto_42396_16x9.jpg"
                             alt="An image of a place with a cheese, tomato and pesto toatie on it.">
-                            <figcaption>Image and recipe sourced from BBC Food.</figcaption>
+                        <!-- Image Caption -->
+                        <figcaption>Image and recipe sourced from BBC Food.</figcaption>
+                        <!-- Input Element for Expand/Hide Button -->
                         <input type="checkbox" id="expand-checkbox-cheese-toastie">
+                        <!-- Recipe Content Section -->
                         <div class="recipe-content-cheese-toastie">
+                            <!-- Introduction Paragraph -->
                             <p>This clever toastie recipe uses up slightly stale bread, the last chunk of cheese and the
                                 end of a jar of pesto. Quick, easy and super-satisfying.</p>
+                            <!-- Ingredients Section -->
                             <h3>Ingredients</h3>
+                            <li>1 tsp pesto</li>
+                            <li>2 slices bread</li>
+                            <li>40g/1½oz cheese, such as cheddar or mozzarella, grated or sliced</li>
+                            <li>1 medium tomato, thinly sliced</li>
+                            <li>freshly ground black pepper</li>
+                            <li>1 tbsp olive oil</li>
+                            <li>salad, to serve</li>
+                            <!-- Instructions Section -->
+                            <h3>Method</h3>
                             <ul>
                                 <li>Spread the pesto over the bread, then top one slice with the cheese and tomato.
                                     Grind over some black pepper and sandwich the two pieces of bread together. </li>
@@ -221,17 +297,26 @@
                                 <li>Remove from the pan, slice in half and serve hot, with salad.</li>
                             </ul>
                         </div>
+                        <!-- Label for Expand/Hide Button -->
                         <label for="expand-checkbox-cheese-toastie" id="expand-checkbox-label">Expand/Hide</label>
                     </aside>
+
+                    <!-- Recipe Container -->
                     <aside class="noodle-soup" id="recipe-item">
+                        <!-- Recipe Heading -->
                         <h2>Vegan Noodle Soup (VE)</h2>
+                        <!-- Meal Image -->
                         <img src="./assets/images/vegan_noodle_soup_84779_16x9.jpg"
                             alt="An image of a bowl of vegan noodle soup.">
-                            <figcaption>Image and recipe sourced from BBC Food.</figcaption>
+                        <!-- Image Caption -->
+                        <figcaption>Image and recipe sourced from BBC Food.</figcaption>
+                        <!-- Input Element for Expand/Hide Button -->
                         <input type="checkbox" id="expand-checkbox-noodle-soup">
-                        <div class="recipe-content-noodle-soup">
+                        <!-- Recipe Content -->
+                        <div class="recipe-content-noodle-soup"><!-- Introduction Paragraph for Recipe -->
                             <p>If you’re on a tight budget, or just want something really easy and quick for dinner,
                                 this brilliant vegan tinned (or packet) soup hack has you covered!</p>
+                            <!-- Ingredients Section -->
                             <h3>Ingredients</h3>
                             <ul>
                                 <li>2 packs of noodle soup (dried or tinned)</li>
@@ -244,6 +329,7 @@
                                 <li>1 small red chilli, thinly sliced</li>
                                 <li>1 tsp sesame seeds</li>
                             </ul>
+                            <!-- Intructions Section -->
                             <h3>Method</h3>
                             <ol>
                                 <li>Put the soup (dried or tinned) into a large saucepan. If using dried soup, boil the
@@ -258,13 +344,16 @@
                             </ol>
 
                         </div>
+                        <!-- Label for Expand/Hide Button -->
                         <label for="expand-checkbox-noodle-soup" id="expand-checkbox-label">Expand/Hide</label>
                     </aside>
                 </div>
             </div>
         </div>
     </main>
+    <!-- Footer -->
     <footer>
+        <!-- Social Media Links -->
         <ul id="social-media-links">
             <li class="social-media"><a href="https://www.instagram.com" target="_blank"><i
                         class="fa-brands fa-instagram"></i></a></li>
